@startuml
title Ingest 共享 ER / Domain（L2 权威图）

' Scope:
' - 唯一结构定义：Document、UploadStatus、核心持久化约束
' Not in scope:
' - 不重复描述各接口流程
' See also:
' - ../acceptance/ingest-acceptance-upload-sequence.puml
' - ../execution/ingest-execution-worker-process-sequence.puml
' - ../execution/ingest-execution-delete-sequence.puml

skinparam shadowing false
skinparam linetype ortho

package "Domain" {
  class Document {
    +documentId: DocumentId
    +kbId: String
    +fileHash: String
    +filename: String
    +fileSize: long
    +status: UploadStatus
    +retryCount: int
    +retryMax: int
    +nextRetryAt: Instant?
    +splitVersion: String
    +createdAt: Instant
    +updatedAt: Instant
  }

  class DocumentId {
    +value: String
  }

  enum UploadStatus {
    ACCEPTED
    UPLOADED
    INGESTING
    INDEXED
    FAILED
    DELETING
    DELETED
  }

  Document *-- DocumentId
  Document --> UploadStatus
}

package "PostgreSQL" {
  entity "ingest_documents" as T_DOC {
    * document_id : varchar(64) <<PK>>
    * kb_id : varchar(128)
    * file_hash : varchar(64)
    * filename : varchar(512)
    * file_size : bigint
    * status : varchar(32)
    retry_count : int
    retry_max : int
    next_retry_at : timestamptz
    split_version : varchar(32)
    * created_at : timestamptz
    * updated_at : timestamptz
    --
    UNIQUE INDEX uk_ingest_documents_kb_file_hash
    (kb_id, file_hash) WHERE file_hash IS NOT NULL AND status <> 'DELETED'
  }

  entity "vector_store" as T_VEC {
    * id : text <<PK>>
    content : text
    metadata : json/jsonb
  }
}

T_DOC ||--o{ T_VEC : metadata.documentId

@enduml
